added dependency for cron

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "director": "1.2.8",
     "dotenv": "2.0.0",
-    "winston": "2.2.0"
+    "winston": "2.2.0",
+    "cron": "*"
   },
   "devDependencies": {
     "localtunnel": "1.8.1",
