--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "*",
     "director": "1.2.8",
     "dotenv": "2.0.0",
+    "fs": "0.0.1-security",
     "mongoose": "^5.0.11",
     "winston": "2.2.0"
   },
